OAKHILL/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Photo__c</fullName>
        <label>Contact Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investor_Prefs_MN_Name__c</fullName>
        <formula>&apos;&lt;a ng-click=&quot;$parent.$parent.$parent.$parent.$parent.$parent.showModal()&quot;&gt;asd&lt;/a&gt;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investor Prefs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Invalid_SendGrid_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid  Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__MassLastStayinTouchRequestDate__c</fullName>
        <inlineHelpText>This is the last updated MassMailer Stay-in-Touch Request Date</inlineHelpText>
        <label>MassMailer Stay-in-Touch Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__MassLastStayinTouchSaveDate__c</fullName>
        <inlineHelpText>This is the last Updated MassMailer Stay-in-Touch Save Date</inlineHelpText>
        <label>MassMailer Stay-in-Touch Save Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <defaultValue>&apos;http://google.com&apos;</defaultValue>
        <label>test2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>HYPERLINK(&quot;http://google.com&quot;, &quot;google&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
</CustomObject>